web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: default
spec:
  containers:  
  - name: node
    image: nodejs:latest   
    ports:
    - containerPort: 80
