web1-pod-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: web1-deployment
  namespace: default
  labels:
    name: web1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web1
  template:
    metadata:
      labels:
        name: web1
  containers:  
  - name: node
    image: nginx   
    ports:
    - containerPort: 80
