web1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
  namespace: default
spec:
  selector:
    name: web1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
