web2-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: web2-service
  namespace: default
spec:
  selector:
    name: web1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
