Ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
          serviceName: web-service
          servicePort: 80
